syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

message CommonStateSignalAuthorChatAccept {
	string authorChatId = 1;
	string aryaSignalInfo = 2;
}
